fixes + security changes
